--- a/README.Rmd
+++ b/README.Rmd
@@ -21,13 +21,18 @@ knitr::opts_chunk$set(
 <!-- badges: start -->
 
 [![R build status](https://github.com/MattCowgill/readrba/workflows/R-CMD-check/badge.svg)](https://github.com/MattCowgill/readrba/actions) [![Lifecycle: maturing](https://img.shields.io/badge/lifecycle-maturing-blue.svg)](https://www.tidyverse.org/lifecycle/#maturing) [![Codecov test coverage](https://codecov.io/gh/MattCowgill/readrba/branch/master/graph/badge.svg)](https://codecov.io/gh/MattCowgill/readrba?branch=master)
+[![CRAN status](https://www.r-pkg.org/badges/version/readrba)](https://CRAN.R-project.org/package=readrba)
 <!-- badges: end -->
 
 Get data from the [Reserve Bank of Australia](https://rba.gov.au/statistics/tables/) in a [tidy](https://tidyr.tidyverse.org/articles/tidy-data.html) [tibble](https://tibble.tidyverse.org). 
 
 ## Installation
-The package is not yet on CRAN. Install from GitHub:
+Install from CRAN using:
+```{r eval=FALSE}
+install.packages("readrba")
+```
 
+Or install the development version from GitHub:
 ```{r eval=FALSE}
 remotes::install_github("mattcowgill/readrba")
 ```
